@@ -1,5 +1,6 @@
 package com.cleany.configuration;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -8,11 +9,10 @@ import org.springframework.boot.context.properties.ConfigurationProperties;
 public record CleanerProperties(List<Long> telegramIds) {
 
     public CleanerProperties {
-        telegramIds = telegramIds == null ? List.of() : List.copyOf(telegramIds);
+        telegramIds = telegramIds == null ? Collections.emptyList() : List.copyOf(telegramIds);
     }
 
     public boolean contains(long telegramUserId) {
         return telegramIds.contains(telegramUserId);
     }
 }
-
